# RLD

./: .dockerignore  .env  .gitignore  .gitmodules  1.0  1.0|def  AUDIT_REPORT.md  Aave Rates Analysis & TWAR Decision.Rmd  DEPLOYMENT_DETAILS.md  README.md  SOFR.xlsx  SOFR2326.xlsx  SYSTEM_DESIGN.md  TODO.md  aave_logger.py  aave_rates.db  aavescan-aave-v3-ethereum-usdc-history.csv  api.py  backend_logs.txt  batched_backfill.py  check_gaps.py  contracts_analysis.md  contracts_index.md  dashboard.py  data_gemini.csv  deploy_checked.sh  dev_start.sh  docker-compose.rates.yml  docker-compose.yml  force_import.py  history.md  implementation_plan.md  mcp_client.py  mock_testnet_config.json  netlify.toml  package-lock.json  patch_gaps.py  rate-dashboard.env  reth_help.txt  scratch.sh  (+8 more)
backend/analytics/: .coveragerc  .dockerignore  .env.enc  Dockerfile  Dockerfile.fluid  __init__.py  aave_accounts.py  aave_constants.py  base.py  collector.py  config.py  config.toml  core.py  docker-compose.yml  euler_schema.py  fluid-indexer.service  fluid_full_coverage.py  init_tables.py  morpho_oracle_snapshots.py  offchain.py  oracle_snapshots.py  processor.py  protocols.py  pyproject.toml  requirements-hypersync.txt  requirements.txt  rld-indexer.service  schema.py  state.py  test_rpc.py  test_vault.py  tokens.py  verify.py  watcher.py
backend/analytics/api/: graphql.py
backend/analytics/docs/: AAVE_INDEXER.md  AAVE_REPLAY_RUNBOOK.md  CLICKHOUSE_INDEXER_RUNBOOK.md  INDEXER_ARCHITECTURE.md  INDEXING_METHODOLOGY.md
backend/analytics/scripts/: _check_aave_assets.py  _check_schema.py  (+42 more)
(+7081 files in other folders)
